done page data guru, and add last login

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "windmill-dashboard-react",
+  "homepage": "https://belajariqra1.com",
   "version": "0.5.1",
   "description": "A multi theme, completely accessible, with components and pages examples, (almost) ready for production dashboard.",
   "private": true,
