update toast promise

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Windmill",
-  "name": "Windmill Dashboard React",
+  "short_name": "Iqra 1",
+  "name": "Belajar Iqra 1",
   "icons": [
     {
       "src": "favicon.ico",
